[package]
name = "lys-refiner"
version = "0.10.0"
description = "Local Lyricify Syllable refiner"
authors = ["LYS Refiner"]
edition = "2021"

[lib]
name = "lys_refiner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
